--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,8 @@
         "@babel/preset-env"
     ],
     "plugins": [
-        "@babel/plugin-transform-runtime",
-        ["@babel/plugin-proposal-class-properties", { "loose": false }]
+       
+        ["@babel/plugin-proposal-class-properties", { "loose": false }],
+        "transform-remove-strict-mode"
     ]
 }
