--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3000 --hot"
+    "dev": "webpack-dev-server --open --port 3000 --hot --host  192.168.1.102"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.8.7",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
@@ -44,6 +45,9 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "mint-ui": "^2.2.13",
-    "vue": "^2.6.11"
+    "moment": "^2.24.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "vue2-preview": "^1.0.5"
   }
 }
